--- a/app.json
+++ b/app.json
@@ -21,16 +21,28 @@
         "backgroundColor": "#ffffff",
         "package": "com.company.final_year_project",
         "versionCode": 1
-      }
+      },
+      "package": "com.mdk410official.final_year_project"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "346dfa91-1865-474b-8124-fc9fe6a34745"
+      }
+    },
+    "owner": "mdk410official"
   }
 }
