--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.2",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "^12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
@@ -35,7 +36,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "firebase": "^10.12.3",
+    "firebase": "^10.12.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
@@ -47,6 +48,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
